Added new API hooks for evidence managementand fixed the UI issues in evidence tab.
